# workspaces

./: .copilot.json  .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README-EN.md  README.md  REFACTOR_STATUS.md  biome.json  ci-datasource-config.md  cleanup-duplicates.sh  copilot-init.sh  latest-output.xmind  latest-prd-enhanced.md  package-lock.json  package.json  playwright.config.ts  playwright.selftest.config.ts  preferences.md  refactor-v3-P3-dataAssets-dry.log.json  repo-branch-mapping.yaml  tsconfig.json  【内置规则丰富】完整性，json中key值范围校验.md  【内置规则丰富】完整性，json中key值范围校验.xmind
.claude/: CLAUDE.md  COPILOT-INIT-GUIDE.md  COPILOT-SETUP-SUMMARY.md  config.json  copilot-init.js  settings.json  settings.local.json
.claude/agents/: analyze-agent.md  backend-bug-agent.md  (+22 more)
.obsidian/: app.json  workspace.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.playwright-cli/: page-2026-04-04T14-18-42-238Z.yml  page-2026-04-07T15-10-28-243Z.yml
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: db.rs  diagnostics.rs  gc.rs  lib.rs  paths.rs  preflight.rs  projects.rs  pty.rs  sessions.rs  state.rs  stream.rs
apps/desktop/src-tauri/src/commands/: diagnostics.rs  files.rs  mod.rs  sessions.rs  workbench.rs
apps/desktop/src-tauri/tests/: cli_mock.rs  pty_lifecycle.rs
config/: repo-branch-mapping.yaml
docs/: planning.md  qa-flow-v2-universal-refactor.md  qa-flow-workflow-audit-and-optimization.md  refactor-roadmap.md  蓝湖PRD自动化导入方案.md
engine/: package.json  tsconfig.json
plugins/: GUIDE.md
preferences/: case-writing.md
rules/: case-writing.md  prd-discussion.md  xmind-structure.md
templates/: GUIDE.md  archive.md.hbs  bug-report-full.html.hbs  bug-report-zentao.html.hbs  bug-report.html.hbs  conflict-report.html.hbs  scan-report.html.hbs
tools/: audit-md-frontmatter.mjs
(+2405 files in other folders)
